# git-playground

./: .dockerignore  .env.test  .env.test.test  .gitignore  .travis.yml  Dockerfile  Part3_Selenium_test.py  README.md  StoreTFstateAzure.sh  Untitled Diagram.drawio  Vagrantfile  access.py  app.py  app_class.py  arch_diagram.drawio  flask_config.py  hello.py  log.txt  login_manager.py  main.tf  pyproject.toml  terraform.tfvars  timeconvert.py  todo_item.py  trello_class.py  trello_item.py  trelloapp.py  trelloapp_class.py  user.py  variables.tf  view_model.py  webhook.sh
Test/: __init__.py  client_test.py  client_test_old.py  hello_test.py  multiple_test.py  selenium_test.py  view_model_test.py
provision/: poetry-setup.sh  python-setup.sh
templates/: CreateCard.html  all_items.html  all_items2.html
